# LocalServiceMarketplace

./: .flake8  .gitattributes  .gitignore  ARCHITECTURE_DIAGRAM_MERMAID.md  ARCHITECTURE_PRESENTATION_GUIDE.md  BACKEND_API_DOCUMENTATION.md  BACKEND_API_DOCUMENTATION_v1.1_COMPLETE.md  CI_QUICK_REFERENCE.md  CI_UNIT_TEST_WORKFLOW.md  COVERAGE_REPORT_SUMMARY.md  ENG-ARCHITECTURE_PRESENTATION_GUIDE.md  ENG-COVERAGE_REPORT_SUMMARY.md  ENG-UNIT_TEST_REFERENCE.md  FRONTEND_API_CHANGES_v1.1.md  FRONTEND_API_DOCUMENTATION.md  FRONTEND_API_DOCUMENTATION_v1.1.1_UPDATE.md  PRESENTATION_QA.md  README.md  SEQUENCE_DIAGRAMS.md  SERVICE_ENV_VARS.md  UNIT_TEST_OVERVIEW_UPDATED.md  UNIT_TEST_REFERENCE.md  pyproject.toml  本地开发环境配置指南.md
gateway-service/: .dockerignore  .env.example  API_CHANGES_SUMMARY.md  Dockerfile  PHASE2_ROUTES_UPDATE.md  POSTMAN_TEST_GUIDE.md  QUICK_TEST_REFERENCE.md  ROUTE_MAPPING_VERIFICATION.md  ROUTE_UPDATE_SUMMARY.md  pyproject.toml
gateway-service/src/gateway_service/: main.py
gateway-service/src/gateway_service/api/: middleware.py  routes.py
gateway-service/src/gateway_service/clients/: __init__.py  auth_client.py  base_client.py  notification_client.py  order_client.py  payment_client.py  review_client.py  user_client.py
gateway-service/src/gateway_service/core/: __init__.py  config.py  jwt_handler.py  rate_limiter.py
gateway-service/src/gateway_service/dto/: __init__.py  response_dto.py
services/auth-service/: .env.example  Dockerfile  TEST_IMPROVEMENT_REPORT.md  UNIT_TEST_QUICK_START.md  UNIT_TEST_README.md  pyproject.toml  pytest.ini
services/auth-service/src/auth_service/: main.py
services/auth-service/src/auth_service/api/: admin_user_api.py  auth_api.py  user_api.py
services/auth-service/src/auth_service/core/: config.py  dependencies.py  roles.py  security.py
services/auth-service/src/auth_service/dao/: role_dao.py  user_dao.py
services/auth-service/src/auth_service/dto/: auth_dto.py  user_dto.py
services/auth-service/src/auth_service/messaging/: rabbitmq_client.py
services/auth-service/src/auth_service/models/: __init__.py  role.py  user.py
services/auth-service/src/auth_service/services/: admin_user_service.py  auth_service.py  user_service.py
services/payment-service/: .dockerignore  .env.example  Dockerfile  IMPLEMENTATION_COMPLETE.md  TEST_SUMMARY.md  pyproject.toml  pytest.ini
services/payment-service/src/payment_service/: main.py
services/payment-service/src/payment_service/api/: __init__.py  payment_api.py  refund_api.py
services/payment-service/src/payment_service/core/: config.py
services/payment-service/src/payment_service/dao/: __init__.py  (+3 more)
services/review-service/: .dockerignore  .env.example  API_OPTIMIZATION.md  Dockerfile  ENDPOINT_DESIGN.md  POSTMAN_TEST_GUIDE.md  QUICK_TEST_REFERENCE.md  pyproject.toml  pytest.ini
services/review-service/src/review_service/: main.py
(+319 files in other folders)
